# network-fault-management-system

./: README.md
components/dynamic-topo/: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile.backend  README.md  main.py  pyproject.toml  requirements.txt
components/dynamic-topo/deploy/: .env.example  docker-compose.prod.yml
components/dynamic-topo/docs/: fault_injection_acceptance.md  gitflow_rollback.md  link_policy.example.json  release_checklist.md  topo.spec.md
components/dynamic-topo/docs/releases/: v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.3.0.md
components/dynamic-topo/dynamic_topo/: __init__.py  engine.py  link_policy.py  storage.py  stream_server.py
components/dynamic-topo/frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
components/dynamic-topo/frontend/src/: App.jsx  main.jsx  styles.css
components/dynamic-topo/scripts/: create_rollback_tag.sh  generate_topology_snapshot.py
components/dynamic-topo/tests/: test_stream_server.py  test_topology.py
components/dynamic-topo/tests/fixtures/: topology_snapshot.json
components/monitor/: .gitmodules
components/monitor/src/collector/: Dockerfile  README.md  config.example.yaml  requirements.txt
components/monitor/src/collector/app/: config.py  contract.py  events.py  failed_events.py  main.py  mapping.py  observability.py  publisher.py  repository.py  routes.py  snapshot.py  storage.py
components/monitor/src/collector/scripts/: send_example.sh  (+1 more)
deploy/: docker-compose.server.yml  dynamic-topo.backend.Dockerfile  dynamic-topo.frontend.Dockerfile  timescaledb-init.sql
(+1 files in other folders)
